--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -50,3 +50,10 @@ h3 {
 h4 {
     font-size: 2.6rem;
 }
+.barra {
+    img {
+        width:100px; /* Ancho deseado */
+        height: auto; /* Altura automática para mantener la proporción */
+        filter: hue-rotate(90deg);    
+    }
+}
