--- a/src/scss/internas/_nosotros.scss
+++ b/src/scss/internas/_nosotros.scss
@@ -1,6 +1,6 @@
 .contenido-nosotros{
     @include tablet{
-        @include grid(2, 2rem);
+        @include grid(2,2rem);
 
         
     }
@@ -10,13 +10,15 @@
 .texto-nosotros blockquote{
     font-weight: $black;
     font-size: 2.2rem;
-    margin: 0;
+    margin:3rem 0;
     padding-left: 1rem 0 3rem 0;    
 }
 
 .imagen{
-    background-image: url('../img/nosotros1.jpg');
     background-size: cover;
+    background-position: center;
     margin: 0;
     padding: 0;
+    
+    display: flex;
 }
