--- a/src/scss/layout/_navegacion.scss
+++ b/src/scss/layout/_navegacion.scss
@@ -1,36 +1,91 @@
+.derecha {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @include tablet {
+        align-items: flex-end;
+    }
+
+    .dark-mode-boton {
+        width: 3rem;
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+        filter: invert(100%);
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        @include tablet {
+            margin-top: 0;
+        }
+    }
+}
+
 .barra {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 3rem;
     @include tablet {
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
     }
 }
 
-.navegacion{
-    @include tablet{
+.navegacion {
+
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    transition: visibility .3s ease-in-out, opacity .5s linear, height .5s linear; 
+
+    @include tablet {
         display: flex;
-        margin-right: 1rem;
-        align-items:center;
-        
+        align-items: center;
+        opacity: 1;
+        visibility: visible;
     }
-    a{
+    
+    a {
         color: $blanco;
         text-decoration: none;
         font-size: 2.2rem;
-        display: flex;
-        text-align: block;
-        margin-right: 5rem;
-        justify-content: flex-end;
-    }
+        display: block;
+        text-align: center;
 
-    @include tablet {
-        margin-right: 2rem;
-        font-size: 1.8rem;
+        @include tablet {
+            margin-right: 2rem;
+            font-size: 1.8rem;
 
-        &:last-of-type{
-            margin-right: 0;
+            &:last-of-type {
+                margin-right: 0;
+            }
+        }
+
+        &:hover {
+            color: $verde;
         }
     }
 }
+
+
+
+.mobile-menu {
+    @include tablet {
+        display: none;
+    }
+
+    img {
+        width: 5rem;
+    }
+}
+
+.mostrar {
+    visibility: visible;
+    opacity: 1;
+    height: auto;
+}
+    
